src/test/ui/transmute/transmute-type-parameters.stderr
error[E0512]: transmute called with types of different sizes
  --> $DIR/transmute-type-parameters.rs:21:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: source type: T (this type's size can vary)
   = note: target type: i32 (32 bits)

warning[E0912]: transmutation from a type with an unspecified layout
  --> $DIR/transmute-type-parameters.rs:26:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: (T, i32) has an unspecified layout
   = note: this will become a hard error in the future

error[E0512]: transmute called with types of different sizes
  --> $DIR/transmute-type-parameters.rs:26:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: source type: (T, i32) (size can vary because of T)
   = note: target type: i32 (32 bits)

error[E0512]: transmute called with types of different sizes
  --> $DIR/transmute-type-parameters.rs:32:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: source type: [T; 10] (size can vary because of T)
   = note: target type: i32 (32 bits)

warning[E0912]: transmutation from a type with an unspecified layout
  --> $DIR/transmute-type-parameters.rs:41:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: Bad<T> has an unspecified layout
   = note: this will become a hard error in the future

error[E0512]: transmute called with types of different sizes
  --> $DIR/transmute-type-parameters.rs:41:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: source type: Bad<T> (size can vary because of T)
   = note: target type: i32 (32 bits)

warning[E0912]: transmutation from a type with an unspecified layout
  --> $DIR/transmute-type-parameters.rs:52:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: Worse<T> has an unspecified layout
   = note: this will become a hard error in the future

error[E0512]: transmute called with types of different sizes
  --> $DIR/transmute-type-parameters.rs:52:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: source type: Worse<T> (size can vary because of T)
   = note: target type: i32 (32 bits)

warning[E0912]: transmutation from a type with an unspecified layout
  --> $DIR/transmute-type-parameters.rs:58:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: std::option::Option<T> has an unspecified layout
   = note: this will become a hard error in the future

error[E0512]: transmute called with types of different sizes
  --> $DIR/transmute-type-parameters.rs:58:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: source type: std::option::Option<T> (size can vary because of T)
   = note: target type: i32 (32 bits)

error: aborting due to 6 previous errors

Some errors occurred: E0512, E0912.
For more information about an error, try `rustc --explain E0512`.
